[gd_scene load_steps=11 format=3 uid="uid://bd5xmpv31go8q"]

[ext_resource type="Texture2D" uid="uid://3g18axpijiuu" path="res://art/fantasy empty playboard.png" id="1_et6tt"]
[ext_resource type="Script" path="res://Characters/Starter/path_selection.gd" id="1_v06wg"]
[ext_resource type="Texture2D" uid="uid://bb0g46gsi2gjk" path="res://art/boss_icon.svg" id="2_yhape"]
[ext_resource type="Texture2D" uid="uid://rwo8ytsp4rk6" path="res://art/enemy_icon.svg" id="4_sa6lp"]
[ext_resource type="Texture2D" uid="uid://da2nhy1r8lp28" path="res://art/elite_icon.svg" id="5_yvdrd"]
[ext_resource type="Texture2D" uid="uid://dvgimvn8mfo3c" path="res://art/treasure_icon.svg" id="6_avg4q"]
[ext_resource type="Texture2D" uid="uid://ew6nw3x4gc14" path="res://art/merchant_icon.svg" id="7_xmfhb"]
[ext_resource type="Texture2D" uid="uid://dhwfpwyu3olg3" path="res://art/random_event_icon.svg" id="8_6j51c"]
[ext_resource type="Texture2D" uid="uid://dj4tvyu53xpfx" path="res://art/rest_icon.svg" id="9_ql3bh"]
[ext_resource type="Texture2D" uid="uid://dek2yok6r44r5" path="res://art/refresh_arrow.svg" id="10_yc3u4"]

[node name="PathSelection" type="Node2D"]
script = ExtResource("1_v06wg")
level_floors = 8
guaranteed_treasure_level = 4

[node name="MazeStart" type="Marker2D" parent="."]
position = Vector2(215, 551)
scale = Vector2(0.3, 0.3)

[node name="MazeEnd" type="Marker2D" parent="."]
position = Vector2(1586, 561)
scale = Vector2(0.3, 0.3)

[node name="MazeTop" type="Marker2D" parent="."]
position = Vector2(903, 202)
scale = Vector2(0.3, 0.3)

[node name="MazeBottom" type="Marker2D" parent="."]
position = Vector2(931, 882)
scale = Vector2(0.3, 0.3)

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_et6tt")
centered = false

[node name="Boss" type="Sprite2D" parent="."]
position = Vector2(1763, 540)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_yhape")

[node name="Enemy" type="Sprite2D" parent="."]
visible = false
position = Vector2(623, 569)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_sa6lp")

[node name="Elite" type="Sprite2D" parent="."]
visible = false
position = Vector2(738, 567)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_yvdrd")

[node name="Treasure" type="Sprite2D" parent="."]
visible = false
position = Vector2(916, 554)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_avg4q")

[node name="Merchant" type="Sprite2D" parent="."]
visible = false
position = Vector2(911, 337)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_xmfhb")

[node name="Random" type="Sprite2D" parent="."]
visible = false
position = Vector2(850, 729)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_6j51c")

[node name="Rest" type="Sprite2D" parent="."]
visible = false
position = Vector2(1110, 725)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ql3bh")

[node name="Button" type="Button" parent="."]
offset_left = 62.0
offset_top = 74.0
offset_right = 925.0
offset_bottom = 882.0
scale = Vector2(0.05, 0.05)
text = "Reload"
icon = ExtResource("10_yc3u4")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
